--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parallel-reject",
+  "name": "async-parallel-reject",
   "description": "async parallel reject",
   "version": "0.0.0",
   "author": {
